# QUBO

./: CMakeLists.txt  base_program.cpp  test.cpp
include/: model.h  qubo_greedy.h  utils.h
src/: model.cpp  qubo_greedy.cpp
